# Warning: all lexers compilation and building is mandatory for successful linking!

INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}/src/qscintilla2/include
${CMAKE_SOURCE_DIR}/src/qscintilla2/src
${CMAKE_SOURCE_DIR}/src/qscintilla2/Qt4
${CMAKE_SOURCE_DIR}/src/qscintilla2/Qt4/Qci
)

ADD_DEFINITIONS("-DQT")
ADD_DEFINITIONS("-DSCI_LEXER")

SET(TORA_QSCINTILLA2_MOC_CLASSES
Qt4/Qsci/qsciapis.h
#Qt4/Qsci/qscicommand.h
#Qt4/Qsci/qscicommandset.h
#Qt4/Qsci/qscidocument.h
#Qt4/Qsci/qsciglobal.h
Qt4/Qsci/qscilexer.h
Qt4/Qsci/qscilexerbash.h
Qt4/Qsci/qscilexerbatch.h
Qt4/Qsci/qscilexercmake.h
Qt4/Qsci/qscilexercpp.h
Qt4/Qsci/qscilexercsharp.h
Qt4/Qsci/qscilexercss.h
Qt4/Qsci/qscilexerd.h
Qt4/Qsci/qscilexerdiff.h
Qt4/Qsci/qscilexerhtml.h
Qt4/Qsci/qscilexeridl.h
Qt4/Qsci/qscilexerjava.h
Qt4/Qsci/qscilexerjavascript.h
Qt4/Qsci/qscilexerlua.h
Qt4/Qsci/qscilexermakefile.h
Qt4/Qsci/qscilexerperl.h
Qt4/Qsci/qscilexerpov.h
Qt4/Qsci/qscilexerproperties.h
Qt4/Qsci/qscilexerpython.h
Qt4/Qsci/qscilexerruby.h
Qt4/Qsci/qscilexersql.h
Qt4/Qsci/qscilexertex.h
Qt4/Qsci/qscilexervhdl.h
Qt4/Qsci/qscimacro.h
#Qt4/Qsci/qsciprinter.h
Qt4/Qsci/qsciscintilla.h
Qt4/Qsci/qsciscintillabase.h
#Qt4/ListBoxQt.h
Qt4/SciClasses.h
#Qt4/ScintillaQt.h
Qt4/Qsci/qscilexeryaml.h
Qt4/Qsci/qscilexerxml.h
Qt4/Qsci/qscilexertcl.h
Qt4/Qsci/qscilexerpostscript.h
Qt4/Qsci/qscilexerpascal.h
Qt4/Qsci/qscilexerfortran77.h
Qt4/Qsci/qscilexerfortran.h
Qt4/Qsci/qsciabstractapis.h
)

SET(TORA_QSCINTILLA2_LIB_SOURCES

include/Accessor.h
include/Face.py
include/HFacer.py
include/KeyWords.h
include/License.txt
include/Platform.h
include/PropSet.h
include/SString.h
include/SciLexer.h
include/Scintilla.h
include/Scintilla.iface
include/ScintillaWidget.h
include/WindowAccessor.h

Qt4/ListBoxQt.cpp
Qt4/ListBoxQt.h
Qt4/PlatQt.cpp
Qt4/SciClasses.cpp
Qt4/SciClasses.h
Qt4/ScintillaQt.cpp
Qt4/ScintillaQt.h
Qt4/qsciapis.cpp
Qt4/qscicommand.cpp
Qt4/qscicommandset.cpp
Qt4/qscidocument.cpp
Qt4/qscilexer.cpp
Qt4/qscilexerbash.cpp
Qt4/qscilexerbatch.cpp
Qt4/qscilexercmake.cpp
Qt4/qscilexercpp.cpp
Qt4/qscilexercsharp.cpp
Qt4/qscilexercss.cpp
Qt4/qscilexerd.cpp
Qt4/qscilexerdiff.cpp
Qt4/qscilexerhtml.cpp
Qt4/qscilexeridl.cpp
Qt4/qscilexerjava.cpp
Qt4/qscilexerjavascript.cpp
Qt4/qscilexerlua.cpp
Qt4/qscilexermakefile.cpp
Qt4/qscilexerperl.cpp
Qt4/qscilexerpov.cpp
Qt4/qscilexerproperties.cpp
Qt4/qscilexerpython.cpp
Qt4/qscilexerruby.cpp
Qt4/qscilexersql.cpp
Qt4/qscilexertex.cpp
Qt4/qscilexervhdl.cpp
Qt4/qscimacro.cpp
Qt4/qsciprinter.cpp
Qt4/qsciscintilla.cpp
Qt4/qsciscintillabase.cpp
Qt4/qscilexeryaml.cpp
Qt4/qscilexerxml.cpp
Qt4/qscilexertcl.cpp
Qt4/qscilexerpostscript.cpp
Qt4/qscilexerpascal.cpp
Qt4/qscilexerfortran77.cpp
Qt4/qscilexerfortran.cpp
Qt4/qsciabstractapis.cpp

src/AutoComplete.cpp
src/AutoComplete.h
src/CallTip.cpp
src/CallTip.h
src/CellBuffer.cpp
src/CellBuffer.h
src/CharClassify.cpp
src/CharClassify.h
src/CharacterSet.h
src/ContractionState.cpp
src/ContractionState.h
src/Decoration.cpp
src/Decoration.h
src/Document.cpp
src/Document.h
src/DocumentAccessor.cpp
src/DocumentAccessor.h
src/Editor.cpp
src/Editor.h
src/ExternalLexer.cpp
src/ExternalLexer.h
src/Indicator.cpp
src/Indicator.h
src/KeyMap.cpp
src/KeyMap.h
src/KeyWords.cpp
src/LexAPDL.cpp
src/LexAU3.cpp
src/LexAVE.cpp
src/LexAda.cpp
src/LexAsm.cpp
src/LexAsn1.cpp
src/LexBaan.cpp
src/LexBash.cpp
src/LexBasic.cpp
src/LexBullant.cpp
src/LexCLW.cpp
src/LexCPP.cpp
src/LexCSS.cpp
src/LexCaml.cpp
src/LexCmake.cpp
src/LexConf.cpp
src/LexCrontab.cpp
src/LexCsound.cpp
src/LexD.cpp
src/LexEScript.cpp
src/LexEiffel.cpp
src/LexErlang.cpp
src/LexFlagship.cpp
src/LexForth.cpp
src/LexFortran.cpp
src/LexGAP.cpp
src/LexGen.py
src/LexGui4Cli.cpp
src/LexHTML.cpp
src/LexHaskell.cpp
src/LexInno.cpp
src/LexKix.cpp
src/LexLisp.cpp
src/LexLout.cpp
src/LexLua.cpp
src/LexMMIXAL.cpp
src/LexMPT.cpp
src/LexMSSQL.cpp
src/LexMatlab.cpp
src/LexMetapost.cpp
src/LexNsis.cpp
src/LexOpal.cpp
src/LexOthers.cpp
src/LexPB.cpp
src/LexPLM.cpp
src/LexPOV.cpp
src/LexPS.cpp
src/LexPascal.cpp
src/LexPerl.cpp
src/LexProgress.cpp
src/LexPython.cpp
src/LexRebol.cpp
src/LexRuby.cpp
src/LexSQL.cpp
src/LexScriptol.cpp
src/LexSmalltalk.cpp
src/LexSpecman.cpp
src/LexSpice.cpp
src/LexTADS3.cpp
src/LexTCL.cpp
src/LexTeX.cpp
src/LexVB.cpp
src/LexVHDL.cpp
src/LexVerilog.cpp
src/LexYAML.cpp
src/License.txt
src/LineMarker.cpp
src/LineMarker.h
src/Partitioning.h
src/PositionCache.cpp
src/PositionCache.h
src/PropSet.cpp
src/RESearch.cpp
src/RESearch.h
src/RunStyles.cpp
src/RunStyles.h
src/SVector.h
src/SciTE.properties
src/ScintillaBase.cpp
src/ScintillaBase.h
src/SplitVector.h
src/Style.cpp
src/Style.h
src/StyleContext.cpp
src/StyleContext.h
src/UniConversion.cpp
src/UniConversion.h
src/ViewStyle.cpp
src/ViewStyle.h
src/WindowAccessor.cpp
src/XPM.cpp
src/XPM.h
src/LexAbaqus.cpp
src/LexASY.cpp
src/LexR.cpp
src/LexPowerShell.cpp
src/LexMySQL.cpp
src/LexMagik.cpp
)

QT4_WRAP_CPP(TORA_QSCINTILLA2_MOC_SOURCES ${TORA_QSCINTILLA2_MOC_CLASSES})

SET(TORA_QSCINTILLA2_LIB "tora_qscintilla2_lib")
ADD_LIBRARY(${TORA_QSCINTILLA2_LIB} STATIC ${TORA_QSCINTILLA2_LIB_SOURCES} ${TORA_QSCINTILLA2_MOC_SOURCES})
